# FireEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Fire.h  README.md  Sandbox.cpp  sandbox.cpp
Fire/: Application.cpp  Application.h  CMakeLists.txt  Common.h  Core.h  Entry.h  Fire.cpp  Fire.h  Logger.cpp  Logger.h
Fire/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Loader.cpp  Loader.h  Logger.cpp  Logger.h
Fire/Core/Trait/: OnEventTrait.h  OnUpdateTrait.h
Fire/Event/: Event.cpp  Event.h  WindowEvent.cpp  WindowEvent.h
Fire/HRI/Vulkan/: VulkanContext.cpp  VulkanContext.h
Fire/Layer/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Fire/RHI/Vulkan/: VulkanContext.cpp  VulkanContext.h
Fire/Render/: Render.cpp  Render.h  VulkanRender.cpp  VulkanRender.h
Fire/Renderer/: Renderer.cpp  Renderer.h
Fire/Window/: SDL2Window.cpp  SDL2Window.h  SDL3Window.cpp  SDL3Window.h  Window.cpp  Window.h
Fire/Window/Backend/: GLFWWindow.cpp  GLFWWindow.h  SDL2Window.cpp  SDL2Window.h  SDL3Window.cpp  SDL3Window.h
Sandbox/: CMakeLists.txt  Sandbox.cpp
Sandbox/00-EmptyApplication/: CMakeLists.txt  main.cpp
Sandbox/01-ImGuiApplication/: CMakeLists.txt  main.cpp
Sandbox/02-GLTFApplication/: CMakeLists.txt  main.cpp
Sandbox/02-TriangleApplication/: CMakeLists.txt
