CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(Fire
  VERSION 1.0.0
  DESCRIPTION "Tiny Game Engine"
  HOMEPAGE_URL "coming soon ..."
  LANGUAGES C CXX
)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE CACHE STRING "cmake build type" FORCE)
ENDIF ()
MESSAGE(STATUS "cmake build type: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Dist-${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Dist-${CMAKE_BUILD_TYPE}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Dist-${CMAKE_BUILD_TYPE}/bin)

SET(COMPILE_DEFINITIONS)
IF (CMAKE_BUILD_TYPE MATCHES "Debug")
ELSE ()
  LIST(APPEND COMPILE_DEFINITIONS NDEBUG)
ENDIF ()

SET(COMPILE_OPTIONS)
LIST(APPEND COMPILE_OPTIONS "-fno-rtti")

ADD_SUBDIRECTORY(Fire)

ADD_EXECUTABLE(Sandbox)

SET_TARGET_PROPERTIES(Sandbox
PROPERTIES
  CXX_STANDARD 20
  CXX_EXTENSIONS OFF
  CXX_STANDARD_REQUIRED ON
)

TARGET_COMPILE_DEFINITIONS(Sandbox
PUBLIC
  ${COMPILE_DEFINITIONS}
)

TARGET_SOURCES(Sandbox
PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/Fire.h
  ${CMAKE_CURRENT_SOURCE_DIR}/Sandbox.cpp
)

TARGET_LINK_LIBRARIES(Sandbox
PUBLIC
  Fire
)
