CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(Fire
  VERSION 1.0.0
  DESCRIPTION "Tiny Game Engine"
  HOMEPAGE_URL "coming soon ..."
  LANGUAGES C CXX
)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE CACHE STRING "cmake build type" FORCE)
ENDIF ()
MESSAGE(STATUS "cmake build type: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Dist-${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Dist-${CMAKE_BUILD_TYPE}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Dist-${CMAKE_BUILD_TYPE}/bin)

SET(COMPILE_DEFINITIONS)
IF (CMAKE_BUILD_TYPE MATCHES "Debug")
ELSE ()
  LIST(APPEND COMPILE_DEFINITIONS NDEBUG)
ENDIF ()

SET(COMPILE_OPTIONS)
LIST(APPEND COMPILE_OPTIONS "-fno-rtti")

ADD_SUBDIRECTORY(Fire)
ADD_SUBDIRECTORY(Sandbox)
