CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
  MESSAGE(FATAL_ERROR "FATAL: In Source Builds Are Not Allowed.")
ENDIF()

PROJECT(Fire
  VERSION 1.0.0
  DESCRIPTION "Fire Is A Tiny Game Engine"
  HOMEPAGE_URL "https://github.com/AliceRemake/FireEngine.git"
  LANGUAGES C CXX
)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug" CACHE STRING "CMake Build Type" FORCE)
ENDIF()
MESSAGE(STATUS "CMake Build Type: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Dist/${CMAKE_BUILD_TYPE} CACHE STRING "Output Directory" FORCE)

SET(COMPILE_DEFINITIONS)
IF(CMAKE_BUILD_TYPE MATCHES "Debug")
ELSE()
  LIST(APPEND COMPILE_DEFINITIONS NDEBUG)
ENDIF()

SET(COMPILE_OPTIONS)
IF(CMAKE_CXX_COMPILER_ID MATCHES GNU)
  LIST(APPEND COMPILE_OPTIONS "-fno-exceptions" "-fno-rtti" "-Wall" "-Wextra" "-Werror")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES MSVC)
  LIST(APPEND COMPILE_OPTIONS "/GR-" "/W4" "/WX")
ELSE()
  MESSAGE(FATAL_ERROR "FATAL: UnSupported Compiler")
ENDIF()

ADD_SUBDIRECTORY(Fire)
ADD_SUBDIRECTORY(Sandbox)
