ADD_EXECUTABLE(Sandbox)

SET_TARGET_PROPERTIES(Sandbox
PROPERTIES
  CXX_STANDARD 20
  CXX_EXTENSIONS OFF
  CXX_STANDARD_REQUIRED ON
)

TARGET_COMPILE_DEFINITIONS(Sandbox
PUBLIC
  ${COMPILE_DEFINITIONS}
)

TARGET_COMPILE_OPTIONS(Sandbox
PUBLIC
  ${COMPILE_OPTIONS}
)

TARGET_INCLUDE_DIRECTORIES(Sandbox
PUBLIC
  ${CMAKE_SOURCE_DIR}
)

TARGET_SOURCES(Sandbox
PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/Sandbox.cpp
)

TARGET_LINK_LIBRARIES(Sandbox
PUBLIC
  Fire
)