SET(EXAMPLE_NAME 01-ImGuiApplication)

ADD_EXECUTABLE(${EXAMPLE_NAME})

SET_TARGET_PROPERTIES(${EXAMPLE_NAME}
PROPERTIES
  CXX_STANDARD 20
  CXX_EXTENSIONS OFF
  CXX_STANDARD_REQUIRED ON
)

TARGET_COMPILE_DEFINITIONS(${EXAMPLE_NAME}
PUBLIC
  ${COMPILE_DEFINITIONS}
)

TARGET_COMPILE_OPTIONS(${EXAMPLE_NAME}
PUBLIC
  ${COMPILE_OPTIONS}
)

TARGET_INCLUDE_DIRECTORIES(${EXAMPLE_NAME}
PUBLIC
  ${CMAKE_SOURCE_DIR}
)

TARGET_SOURCES(${EXAMPLE_NAME}
PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

TARGET_LINK_LIBRARIES(${EXAMPLE_NAME}
PUBLIC
  Fire
)
